--- a/src/js/components/presentational/home_page/home_page.css
+++ b/src/js/components/presentational/home_page/home_page.css
@@ -9,7 +9,16 @@
   overflow: hidden;
 }
 
+.home-page-logo{
+  animation: home-logo-spin infinite 10s linear;
+  width: 50px;
+  margin-right: 20px;
+}
+
 .home-page-header-container{
+  display: flex;
+  align-content: center;
+  justify-content: center;
   margin-bottom: 5%;
 }
 
@@ -84,4 +93,13 @@
   cursor: pointer;
   outline: none;
   border: none;
+}
+
+@keyframes home-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
