--- a/src/js/components/presentational/address_summary/address_summary.css
+++ b/src/js/components/presentational/address_summary/address_summary.css
@@ -39,7 +39,7 @@
 }
 
 .address-summary-list-row-item{
-  border-bottom: 2px solid #F0F2F6;
+  border-bottom: 2px solid #DFE3EB;
   margin: 0;
   padding: 15px 0;
 }
